tests/compile_errors/inferred-enum-case-invalid.buzz
// Could not infer type for enum case `es`.
enum Locale {
    fr,
}

test "invalid inferred enum case" {
    final value: Locale = .es;
}
